<package format="3">
  <name>my_local_concrol</name>
  <version>0.0.1</version>
  <description>Simple DWB-like local planner for Nav2</description>
  <maintainer email="lcyx@todo.todo">you</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pluginlib</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

</package>
